<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/test_start_lyt"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="visible" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/test_subtitle_intro"
                style="@style/test_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginTop="20.0dip"
                android:text="@string/test_progress" />

            <TextView
                android:id="@+id/test_intro"
                style="@style/test_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="20.0dip"
                android:text="@string/test_intro" />

            <TextView
                android:id="@+id/test_subtitle_guide"
                style="@style/test_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginTop="20.0dip"
                android:text="@string/test_progress" />

            <TextView
                android:id="@+id/test_guide"
                style="@style/test_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="20.0dip"
                android:text="@string/test_intro" />

            <Button
                android:id="@+id/test_start_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20.0dip"
                android:layout_marginTop="20.0dip"
                android:background="@drawable/test_start_btn_selector"
                android:text="@string/test_start_button"
                android:textColor="@color/white"
                android:textSize="17.0sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>